tests/trybuild/compile_fail/with_settings/bump/borrow/guaranteed_allocated_increase.stderr
error[E0080]: evaluation panicked: can't turn a non-guaranteed-allocated bump allocator into a guaranteed-allocated one
 --> src/raw_bump.rs
  |
  | /             assert!(
  | |                 NewS::GUARANTEED_ALLOCATED <= S::GUARANTEED_ALLOCATED,
  | |                 "can't turn a non-guaranteed-allocated bump allocator into a guaranteed-allocated one"
  | |             );
  | |_____________^ evaluation of `bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, bump_scope::settings::BumpSettings>::ensure_satisfies_settings_for_borrow::<bump_scope::settings::BumpSettings<1, true, true>>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/raw_bump.rs
  |
  | /         const {
  | |             assert!(NewS::UP == S::UP, "can't change `UP` setting");
  | |
  | |             assert!(
... |
  | |             assert!(NewS::CLAIMABLE == S::CLAIMABLE, "can't change claimability");
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, BumpSettings>::ensure_satisfies_settings_for_borrow::<BumpSettings<1, true, true>>`
 --> src/bump.rs
  |
  |         self.raw.ensure_satisfies_settings_for_borrow::<NewS>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
